src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Data Cleanup</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>General Question</fullName>
                </value>
                <value>
                    <fullName>Mass transfer of Accounts</fullName>
                </value>
                <value>
                    <fullName>Object Edits</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Process Change</fullName>
                </value>
                <value>
                    <fullName>Process Creation</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Files__c</fullName>
        <label>Requested Files</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DER</fullName>
                </value>
                <value>
                    <fullName>DELQ</fullName>
                </value>
                <value>
                    <fullName>DEMOG</fullName>
                </value>
                <value>
                    <fullName>Private / Ins. Loan</fullName>
                </value>
                <value>
                    <fullName>Nelnet</fullName>
                </value>
                <value>
                    <fullName>SLMA</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>AES</fullName>
                </value>
                <value>
                    <fullName>PHEAA</fullName>
                </value>
                <value>
                    <fullName>Citibank</fullName>
                </value>
                <value>
                    <fullName>Student Loan Express</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>Mohela</fullName>
                </value>
                <value>
                    <fullName>ECSI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Materials__c</fullName>
        <label>Requested Materials</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>STAFF Master Prom Notes</fullName>
                </value>
                <value>
                    <fullName>STAFF Master Prom Notes - Imprint</fullName>
                </value>
                <value>
                    <fullName>STAFF Compl Directions</fullName>
                </value>
                <value>
                    <fullName>Entr/Exit Counsel Check</fullName>
                </value>
                <value>
                    <fullName>STAFF School Cert Form</fullName>
                </value>
                <value>
                    <fullName>Budget Worksheet</fullName>
                </value>
                <value>
                    <fullName>Pre-paid return envels</fullName>
                </value>
                <value>
                    <fullName>Deferment/Forbearance Info</fullName>
                </value>
                <value>
                    <fullName>Repayment Worksheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SALTVanity_URL__c</fullName>
        <formula>Account.SALT_Vanity_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SALT Vanity URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALT_Intro_Email_Content_Alumni__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Intro Email Content: Alumni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALT_Intro_Email_Content_Enrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Intro Email Content: Enrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALT_Intro_Email_Sent_Alumni__c</fullName>
        <label>SALT Intro Email Sent: Alumni</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SALT_Intro_Email_Sent_Enrolled__c</fullName>
        <label>SALT Intro Email Sent: Enrolled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SALT_Profile_Creation_Date__c</fullName>
        <description>Date the BPMS profile is complete</description>
        <label>SALT Profile Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STAFF_Effect_Date__c</fullName>
        <label>STAFF Effect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Safelist_IP_Address_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safelist IP Address Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Surveys__c</fullName>
        <label>Satisfaction Surveys</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes – Initiated</fullName>
                </value>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>Yes – Completed</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Co_Branded_URL__c</fullName>
        <description>Branded School page web link URL</description>
        <label>School Co-Branded URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>School_Email__c</fullName>
        <label>School Email</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>School - CL4 Unsol Resp</fullName>
                </value>
                <value>
                    <fullName>Copay Check Roster</fullName>
                </value>
                <value>
                    <fullName>CRC v1 Disb Forecast All</fullName>
                </value>
                <value>
                    <fullName>CRC v1 Disb Forecast School Hold</fullName>
                </value>
                <value>
                    <fullName>CRC v1 School Roster</fullName>
                </value>
                <value>
                    <fullName>CRC v1 SCR</fullName>
                </value>
                <value>
                    <fullName>School - CRC v1 Unsol Resp</fullName>
                </value>
                <value>
                    <fullName>Credit Approval Letter Rpt</fullName>
                </value>
                <value>
                    <fullName>Disb Roster</fullName>
                </value>
                <value>
                    <fullName>Email SCR Notification</fullName>
                </value>
                <value>
                    <fullName>FastFund Pre-Disb</fullName>
                </value>
                <value>
                    <fullName>Indiv Check Roster</fullName>
                </value>
                <value>
                    <fullName>Notice of Loan Approval</fullName>
                </value>
                <value>
                    <fullName>Pre-Disb Rpt</fullName>
                </value>
                <value>
                    <fullName>Preclaims For Schools</fullName>
                </value>
                <value>
                    <fullName>School - Proc Sum Rpt</fullName>
                </value>
                <value>
                    <fullName>Roster Dunning Rpt</fullName>
                </value>
                <value>
                    <fullName>School Escrow Disb R/U</fullName>
                </value>
                <value>
                    <fullName>School Hold File</fullName>
                </value>
                <value>
                    <fullName>School Missing Prom Note Rpt</fullName>
                </value>
                <value>
                    <fullName>School Pending Cert Req</fullName>
                </value>
                <value>
                    <fullName>School Roster File</fullName>
                </value>
                <value>
                    <fullName>SSCR not returned Letter</fullName>
                </value>
                <value>
                    <fullName>SSCR Outbound feed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_OE_Code_s__c</fullName>
        <label>School OE Code(s)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Portal_Set_Up_Date__c</fullName>
        <description>School portal set up date.</description>
        <label>School Portal Set Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_Process_Flow__c</fullName>
        <label>School Process Flow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Guarantee Only</fullName>
                </value>
                <value>
                    <fullName>Mix/Split</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Provided_Servicer_Data__c</fullName>
        <label>School Provided Servicer Data</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>ACS-Perkins</fullName>
                </value>
                <value>
                    <fullName>AES</fullName>
                </value>
                <value>
                    <fullName>Campus Partners-Perkins</fullName>
                </value>
                <value>
                    <fullName>Cornerstone</fullName>
                </value>
                <value>
                    <fullName>ECSI</fullName>
                </value>
                <value>
                    <fullName>Edfinancial</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>MOHELA</fullName>
                </value>
                <value>
                    <fullName>Nelnet</fullName>
                </value>
                <value>
                    <fullName>Sallie Mae</fullName>
                </value>
                <value>
                    <fullName>UAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the school requires students to complete My Money 101.</inlineHelpText>
        <label>School Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seed_List__c</fullName>
        <label>Seed List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes – Initiated</fullName>
                </value>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>Yes – Completed</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Servicer_Access_Auth__c</fullName>
        <label>Servicer Access Authorized</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>ACS-Perkins</fullName>
                </value>
                <value>
                    <fullName>AES</fullName>
                </value>
                <value>
                    <fullName>Aspire</fullName>
                </value>
                <value>
                    <fullName>Campus Partners-Perkins</fullName>
                </value>
                <value>
                    <fullName>Cornerstone</fullName>
                </value>
                <value>
                    <fullName>ECSI</fullName>
                </value>
                <value>
                    <fullName>Edfinancial</fullName>
                </value>
                <value>
                    <fullName>EdManage/SC Student Loan (NFP)</fullName>
                </value>
                <value>
                    <fullName>Granite State (NFP)</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Kentucky (NFP)</fullName>
                </value>
                <value>
                    <fullName>MOHELA</fullName>
                </value>
                <value>
                    <fullName>Nelnet</fullName>
                </value>
                <value>
                    <fullName>Oklahoma (NFP)</fullName>
                </value>
                <value>
                    <fullName>Sallie Mae</fullName>
                </value>
                <value>
                    <fullName>UAS</fullName>
                </value>
                <value>
                    <fullName>VSAC (NFP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Servicer_Access_Requested__c</fullName>
        <label>Servicer Access Requested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>ACS-Perkins</fullName>
                </value>
                <value>
                    <fullName>AES</fullName>
                </value>
                <value>
                    <fullName>Aspire</fullName>
                </value>
                <value>
                    <fullName>Campus Partners-Perkins</fullName>
                </value>
                <value>
                    <fullName>Cornerstone</fullName>
                </value>
                <value>
                    <fullName>ECSI</fullName>
                </value>
                <value>
                    <fullName>Edfinancial</fullName>
                </value>
                <value>
                    <fullName>EdManage/SC Student Loan (NFP)</fullName>
                </value>
                <value>
                    <fullName>Granite State (NFP)</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Kentucky (NFP)</fullName>
                </value>
                <value>
                    <fullName>MOHELA</fullName>
                </value>
                <value>
                    <fullName>Nelnet</fullName>
                </value>
                <value>
                    <fullName>Oklahoma (NFP)</fullName>
                </value>
                <value>
                    <fullName>Sallie Mae</fullName>
                </value>
                <value>
                    <fullName>UAS</fullName>
                </value>
                <value>
                    <fullName>VSAC (NFP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sessions_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sessions Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sponsorhip_meeting__c</fullName>
        <label>Sponsorhip meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_1_Status__c</fullName>
        <label>Stage 1 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_File_Received__c</fullName>
        <label>Test File Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Testing_Buy_off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Testing Buy-off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testing_Completed__c</fullName>
        <label>Testing Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vanity_URL_Status__c</fullName>
        <label>Vanity URL Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welcom_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Guide_Code__c</fullName>
        <inlineHelpText>Enter the code of the Welcome Guide sent to this customer.  The code is located on the back cover of the Guide.</inlineHelpText>
        <label>Welcome Guide Code:</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Process_Status__c</fullName>
        <label>3rd Party Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3rd_Party__c</fullName>
        <label>3rd Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>ELM</fullName>
                </value>
                <value>
                    <fullName>OpenNet (FMS)</fullName>
                </value>
                <value>
                    <fullName>OpenNet (Web)</fullName>
                </value>
                <value>
                    <fullName>Nteract</fullName>
                </value>
                <value>
                    <fullName>ScholarNet</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>logo_published__c</fullName>
        <description>Date logo was published</description>
        <label>Logo Published</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All_Consumer_Services_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Implementation_Consumer_Services</value>
        </filters>
        <label>All Consumer Services Cases</label>
        <sharedTo>
            <role>MasterLevel</role>
            <role>SchoolClientManager</role>
            <role>SchoolManagement</role>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Cases_from_Reassign_Me_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>New_Message_Indicator__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Employer_Community_Case_From_Employee,Case.Email_To_Case</value>
        </filters>
        <label>CS Cases from &quot;Reassign Me&quot; Queue</label>
        <queue>Reassign_Me</queue>
        <sharedTo>
            <role>EDM_Counselor</role>
            <role>EDM_Manager</role>
            <role>MasterLevel</role>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Employer_Community_Case_From_Employee,Case.Email_To_Case</value>
        </filters>
        <label>CS Closed Cases</label>
        <sharedTo>
            <role>EDM_Counselor</role>
            <role>EDM_Manager</role>
            <role>MasterLevel</role>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Closed_Cases_This_week</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>New_Message_Indicator__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Employer_Community_Case_From_Employee,Case.Email_To_Case</value>
        </filters>
        <filters>
            <field>CASES.CLOSED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>CS Closed Cases This week</label>
        <sharedTo>
            <role>EDM_Counselor</role>
            <role>EDM_Manager</role>
            <role>MasterLevel</role>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Email_Queue_AskASA</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>CS Email Queue AskASA@asa.org</label>
        <queue>Askasa_asa_org_Email</queue>
        <sharedTo>
            <role>EDM_Counselor</role>
            <role>EDM_Manager</role>
            <role>MasterLevel</role>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Email_Queue_Salt</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>CS Email Queue Salt@saltmoney.org</label>
        <queue>Salt_Email</queue>
        <sharedTo>
            <role>EDM_Counselor</role>
            <role>EDM_Manager</role>
            <role>MasterLevel</role>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Email_Queue_Support</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>CS Email Queue Support@asa.org</label>
        <queue>Support_asa_org_Email</queue>
        <sharedTo>
            <role>EDM_Counselor</role>
            <role>EDM_Manager</role>
            <role>MasterLevel</role>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Gradifi_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Employer_Community_Case_From_Employee,Case.Employer_Community_Case_From_HR_Manager</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Gradifi</value>
        </filters>
        <label>CS Gradifi Cases</label>
        <sharedTo>
            <role>EDM_Counselor</role>
            <role>EDM_Manager</role>
            <role>MasterLevel</role>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_My_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Employer_Community_Case_From_Employee,Case.Email_To_Case</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CS My Closed Cases</label>
        <sharedTo>
            <role>EDM_Counselor</role>
            <role>EDM_Manager</role>
            <role>MasterLevel</role>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_My_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>New_Message_Indicator__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Employer_Community_Case_From_Employee,Case.Email_To_Case</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CS My Open Cases</label>
        <sharedTo>
            <role>EDM_Counselor</role>
            <role>EDM_Manager</role>
            <role>MasterLevel</role>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>New_Message_Indicator__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Employer_Community_Case_From_Employee,Case.Email_To_Case</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CS Open Cases</label>
        <sharedTo>
            <role>EDM_Counselor</role>
            <role>EDM_Manager</role>
            <role>MasterLevel</role>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Open_Cases_5_Days_Old</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>New_Message_Indicator__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE</field>
            <operation>notEqual</operation>
            <value>LAST_N_DAYS:5</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Employer_Community_Case_From_Employee,Case.Email_To_Case</value>
        </filters>
        <label>CS Open Cases &gt; 5 Days Old</label>
        <sharedTo>
            <role>EDM_Counselor</role>
            <role>EDM_Manager</role>
            <role>MasterLevel</role>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EC_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Employer Community</value>
        </filters>
        <label>Employer Community Cases</label>
        <sharedTo>
            <role>MasterLevel</role>
            <role>TopLevel</role>
            <roleAndSubordinatesInternal>EDM_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CallCenter</fullName>
        <active>false</active>
        <businessProcess>Corporate</businessProcess>
        <description>Cases created by Call Center</description>
        <label>Call Center</label>
    </recordTypes>
</CustomObject>